<resources>
    <string name="app_name">Thirteen Stones</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="info_title">How to Play</string>
    <string name="banner_text">Please tap the number of stones to remove:</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="stones_remaining_in_pile">Stones Remaining in Pile</string>
    <string name="current_player">Current Player</string>
    <string name="welcome">Welcome!</string>
    <string name="game_over">Game Over</string>
    <string name="winner_is_player_number">The winner is Player #</string>
    <string name="games_played"><![CDATA[Games played: ]]></string>
    <string name="error_msg_could_not_update_image">Could not update stones image.</string>
    <string name="settings">Settings</string>
    <string name="view_statistics">View Statistics</string>
    <string name="reset_statistics">Reset Statistics</string>

    <!-- Preference Titles -->
    <string name="display_header">Display</string>
    <string name="game_header">Game</string>

    <!-- Preferences -->
    <string name="night_mode_key">Night Mode</string>
    <string name="night_mode_title">Dark/Night Mode</string>
    <string name="night_mode_off">Never use Night/Dark Mode</string>
    <string name="night_mode_on">Night/Dark Mode (unless disabled in OS Settings)</string>

    <string name="win_on_last_pick_key">Win on Last Pick</string>
    <string name="win_on_last_pick_title">Win on Last Pick</string>
    <string name="win_on_last_pick_on">Last player to pick is not the winner</string>
    <string name="win_on_last_pick_off">Last player to pick is the winner</string>

    <string name="auto_save_key">Auto-Save</string>
    <string name="auto_save_off">On exit, the game in progress will not be saved</string>
    <string name="auto_save_on">On exit, the game in progress will be saved</string>
    <string name="auto_save_title">Auto-Save Game on Exit</string>
    <string name="fab">FAB</string>

    <!-- Strings used for Statistics Activity -->
    <string name="player_number">Player Number</string>
    <string name="games_won">Games Won</string>
    <string name="percent_won">Percent Won</string>

</resources>